--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
-  text-align: center;
   width: 100vw;
-  height: 100vh;
-  background-color: aquamarine;
+  min-height: 100vh;
+  background-color: greenyellow;
+  font-size: 16px;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: no-wrap;
+  align-items: center;
 }
