--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap");
+
 .App {
   width: 100vw;
   min-height: 100vh;
-  background-color: greenyellow;
+  background-color: darkseagreen;
   font-size: 16px;
+  font-family: "Quicksand", sans-serif;
 }
 
 .contact-container {
@@ -10,4 +13,28 @@
   flex-direction: column;
   flex-wrap: no-wrap;
   align-items: center;
+  padding-bottom: 3rem;
+}
+
+h1 {
+  text-align: center;
+  width: 100%;
+  font-weight: 200;
+  font-size: 2.5rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .contact-container {
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-bottom: 0;
+  }
+  h1 {
+    text-align: center;
+    width: 100%;
+    font-weight: 200;
+    font-size: 4rem;
+    line-height: 1rem;
+  }
 }
